--- a/shadowofmordor.html
+++ b/shadowofmordor.html
@@ -69,14 +69,14 @@
                 <div style="clear: both;"></div>
                 <div class="imagegroup">
                     <ul>
-                        <li>
+                        <li class="first-row">
                             <ul>
                                 <li class="col-md-4"><img src="css/images/thumb1.png"></li>
                                 <li class="col-md-4"><img src="css/images/thumb2.png"></li>
                                 <li class="col-md-4"><img src="css/images/thumb3.png"></li>
                             </ul>
                         </li>
-                        <li>
+                        <li class="second-row">
                             <ul>
                                 <li class="col-md-4"><img src="css/images/thumb4.png"></li>
                                 <li class="col-md-8">
