--- a/shadowofmordor.html
+++ b/shadowofmordor.html
@@ -105,23 +105,27 @@
                 <ul>
                     <li class="col-md-6 slide">
                         <img src="css/images/prev-img.png">
-                        <div class="prev col-md-8">
-                            <img class="prev-arrow col-md-2" src="css/images/prev-arrow.png">
-                            <div class="prev-letter col-md-10">
+                        <div class="prev">
+                            <div class="prev-arrow col-md-2">
+                                <img src="css/images/prev-arrow.png">
+                            </div>
+                            <div class="prev-letter col-md-8">
                                 <p>preveous case study</p>
                                 <h3>Dungeous & Dragons Online</h3>
                             </div>
                             <div class="clearfix"></div>
                         </div>
                     </li>
-                    <li class="col-md-6 slide">
+                    <li class="col-md-10 slide">                         
                         <img src="css/images/next-img.png">
-                        <div class="next col-md-8">                            
-                            <div class="next-letter col-md-10">
+                        <div class="next">                            
+                            <div class="next-letter col-md-8">
                                 <p>preveous case study</p>
                                 <h3>Dungeous & Dragons Online</h3>
                             </div>
-                            <img class="prev-arrow col-md-2" src="css/images/next-arrow.png">
+                            <div class="next-arrow col-md-2">
+                                <img src="css/images/next-arrow.png">
+                            </div>
                             <div class="clearfix"></div>
                         </div>
                     </li>
