--- a/shadowofmordor.html
+++ b/shadowofmordor.html
@@ -120,7 +120,7 @@
                         <img src="css/images/next-img.png">
                         <div class="next">                            
                             <div class="next-letter col-md-8">
-                                <p>preveous case study</p>
+                                <p>next case study</p>
                                 <h3>Dungeous & Dragons Online</h3>
                             </div>
                             <div class="next-arrow col-md-2">
