--- a/shadowofmordor.html
+++ b/shadowofmordor.html
@@ -14,10 +14,10 @@
 <meta name="creation-date" content="06/01/2011">
 <meta name="revisit-after" content="15 days">
 <title>ShadowOfMordor</title>
-<link href="bootstrap/css/bootstrap.css" rel="stylesheet">    
+<link href="dist/css/bootstrap.css" rel="stylesheet">    
 <link rel="stylesheet" type="text/css" href="css/style.css">  
 
-<script src="bootstrap/js/bootstrap.js" type="javascript"></script>
+<script src="dist/js/bootstrap.js" type="javascript"></script>
 
 </head>
 <body>          
@@ -131,7 +131,45 @@
                     </li>
                 </ul>
             </div>
-        </div>
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+              </ol>
+
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner">
+                <div class="item active">
+                  <img src="css/images/prev-img.png" alt="prev">
+                  <div class="carousel-caption">
+                    This is a test1
+                  </div>
+                </div>    
+                <div class="item">
+                  <img src="css/images/next-img.png" alt="prev">
+                  <div class="carousel-caption">
+                    This is a test2
+                  </div>
+                </div>  
+                <div class="item">
+                  <img src="css/images/prev-img.png" alt="prev">
+                  <div class="carousel-caption">
+                    This is a test3
+                  </div>
+                </div>  
+              </div>
+
+              <!-- Controls -->
+              <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+              </a>
+              <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+              </a>
+            </div>           
+         </div>
     </div>
   
 </body>
